syntax = "proto3";
package jobworkerp.runner;

// internal use: notify job result to slack as next_worker
message SlackNotificationRunnerSettings {
  string bot_token    = 1;
  string channel      = 2;
  string title        = 3;
  bool notify_success = 4;
  bool notify_failure = 5;
}
