syntax = "proto3";

// process JobResultData
message SlackJobResultArg {
    // message ResultMessageData {
    //     int64 result_id                            = 1; // job result id (jobworkerp.data.JobResultId::value)
    //     int64 job_id                               = 2; // job id (jobworkerp.data.JobId::value)
    //     string worker_name                         = 3;
    //     // jobworkerp.data.ResultStatus status        = 4; // job result status
    //     // ResultOutput output                        = 5; // job response data
    //     uint32 retried                             = 6;
    //     int64 enqueue_time                         = 7; // job enqueue time
    //     int64 run_after_time                       = 8; // job run after this time (specified by client)
    //     int64 start_time                           = 9; // job start time
    //     int64 end_time                             = 10; // job end time
    // }
    // ResultMessageData message = 1;
    // optional string channel = 2;
}
