syntax = "proto3";

// internal use: notify job result to slack as next_worker
message SlackJobResultOperation {
  // string title        = 1;
  // string bot_token        = 2;
  // string channel        = 3;
  // bool notify_success        = 4;
  // bool notify_failure        = 5;
}

// // plugin job operation
// message PluginOperation {
//   string name = 1;
// }

